# compiler

./: .gitignore  Cargo.toml
compiler/: Cargo.toml
compiler/ast/: Cargo.toml
compiler/ast/src/: ast.rs  lib.rs  tests.rs  validation.rs
compiler/ast/src/ast/: behavior.rs  expression.rs  import.rs  module.rs  module_definition.rs  path.rs  pattern.rs  source_file.rs  trait.rs  type.rs  type_annotation.rs  type_definition.rs  type_variable.rs  value.rs
compiler/ast/src/tests/repl_line/: behavior__parse_empty_external_trait.test  behavior__parse_empty_external_type.test  behavior__parse_empty_generic_trait.test  behavior__parse_empty_generic_type_with_nil.test  behavior__parse_trait_member_let.test  behavior__parse_trait_member_type_annotation_with_self_ref.test  behavior__parse_typevar_constraints_with_path.test  expr__parse_function_call_multiple_args.test  expr__parse_negation.test  expr__parse_operator_prefix_function_call.test  expr__parse_tuple_eats_trailing_comma.test  expr__parse_unit.test  expr__parse_variable_ref.test  if_then_else__parse.test  import__parse_longer_single_path.test  import__parse_longer_single_path_with_symbols.test  lambda__parse_destructured_argument.test  lambda__parse_multi_args.test  lambda__parse_qualified_argument.test  lambda__parse_single_parens_arg_lambda_expr.test  lambda__parse_single_string_literal_arg_lambda_expr.test  lambda__parse_single_tuple_literal_arg_lambda_expr.test  lambda__parse_single_unit_arg_lambda_expr.test  match_expr__parses_two_options_with_else.test  match_expr__parses_typedef.test  operator_definition__parses.test  statement__parse_variable_definition_lambda.test  statement__parse_variable_definition_path_value.test  trait__parse_self_typevar_constants_multiple_underscores.test  trait__parse_self_typevar_constants_with_path.test  trait__parse_trait_member_let.test  type_annotation__parses_with_unit_type.test  type_definition__multiple_empty_types__with_starting_pipe_and_trailing_end.test  type_definition__single_member_with_multiple_generic_properties.test  type_definition__single_member_with_multiple_specific_properties.test  type_definition__single_member_with_one_generic_property.test  type_definition__single_member_with_tuple_property.test
compiler/ast/src/tests/repl_line_errors/: behavior__parse_typevar_recovers_with_no_equals.test  behavior__recover_on_behavior_kw_missing_end.test  behavior__recover_on_behavior_kw_missing_where__let_kw.test  behavior__recover_on_behavior_kw_missing_where__typeof_kw.test  behavior__recover_on_behavior_kw_missing_where__typevar_kw.test  behavior__recover_on_incomplete_typevar.test  behavior__recover_on_type_annotation_with_incomplete_type.test  behavior__recover_on_type_annotation_with_no_colon.test  behavior__recover_on_type_annotation_with_parenthesized_type_without_right_paren.test  behavior__recover_on_typevar_constraint_without_plus.test  behavior__recover_on_typevar_without_name.test  behavior__recover_on_unknown_token.test  behavior__recovers_missing_end_kw.test  behavior__recovers_missing_for_kw.test  behavior__recovers_missing_trait_name.test  behavior__recovers_missing_type_name.test  behavior__recovers_missing_where_kw.test  behavior__recovers_on_missing_behavior_name.test  expr__fails_when_missing_rhs.test  expr__fails_when_negating_bad_expr.test  expr__fails_when_tuple_missing_comma.test  expr__fails_when_tuple_missing_rhs.test  (+99 more)
compiler/hir/: Cargo.toml
compiler/hir/src/: ast_glossary.rs  database.rs  hir.rs  index.rs  lib.rs  tests.rs
compiler/hir/src/hir/: behavior.rs  expression.rs  import.rs  module.rs  path.rs  pattern.rs  source_file.rs  statement.rs  trait.rs  type.rs  type_annotation.rs  type_definition.rs  type_reference.rs  type_variable.rs  value.rs
compiler/hir_index/: Cargo.toml
compiler/hir_index/src/: import.rs  lib.rs  tests.rs  value.rs
compiler/lexer/: Cargo.toml
compiler/lexer/src/: lib.rs  token_kind.rs
compiler/parser/: Cargo.toml
compiler/parser/src/: convert.rs  docs.rs  event.rs  expr.rs  grammar.rs  imports.rs  lib.rs  module.rs  on_demand_test.rs  parens.rs  parser.rs  pattern.rs  sink.rs  source.rs  tests.rs  token_set.rs  trait.rs  type.rs  type_definition.rs  type_variables.rs
compiler/parser/src/grammar/: argument.rs  behavior.rs  expr.rs  ident.rs  import.rs  lambda.rs  module.rs  path.rs  stmt.rs  trait.rs  type.rs  type_annotation.rs  type_definition.rs  type_variable.rs  value.rs  variable_def.rs
compiler/parser/src/parser/: marker.rs  parse_error.rs
compiler/project/: Cargo.toml
compiler/project/src/: lib.rs
compiler/project/test_projects/ignores_non_alloy_files/: Alloy.toml
compiler/project/test_projects/incorrect_package_type/: Alloy.toml
compiler/project/test_projects/missing_source/: Alloy.toml
compiler/project/test_projects/recursive_src/: Alloy.toml
compiler/rowan/: Cargo.toml
compiler/rowan/ast/: Cargo.toml
compiler/rowan/ast/src/: lib.rs  validation.rs
compiler/rowan/hir/: Cargo.toml
compiler/rowan/hir/src/: database.rs  lib.rs
compiler/rowan/lexer/: Cargo.toml
compiler/rowan/lexer/src/: lib.rs  token_kind.rs
compiler/rowan/parser/: Cargo.toml
compiler/rowan/parser/src/: event.rs  grammar.rs  lib.rs  parser.rs  sink.rs  source.rs  tests.rs  token_set.rs
compiler/rowan/src/: lib.rs  parser.rs  syntax.rs
compiler/rowan/src/parser/: event.rs  expr.rs  marker.rs  sink.rs  source.rs
compiler/rowan/syntax/: Cargo.toml
compiler/rowan/syntax/src/: lib.rs
compiler/scope/: Cargo.toml
compiler/scope/src/: lib.rs
compiler/src/: canonical.rs  lib.rs  test_source.rs  type_inference.rs  types.rs
compiler/src/parse/: mod.rs
compiler/src/type_inference/: mod.rs
compiler/syntax/: Cargo.toml
compiler/syntax/src/: lexer.rs  lib.rs  parser.rs  syntax.rs
compiler/syntax/src/parser/: event.rs  expr.rs  marker.rs  sink.rs
compiler/test_harness/: Cargo.toml
compiler/test_harness/src/: lib.rs
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/main/: example
fuzz/fuzz_targets/: main.rs  parse_lower.rs
smith/repl/: Cargo.toml
smith/repl/src/: main.rs
(+697 files in other folders)
