[workspace]
members = [
    "compiler",
    "compiler/ast",
    "compiler/hir",
    "compiler/lexer",
    "compiler/parser",
    "compiler/project",
    "compiler/scope",
    "compiler/syntax",
    "compiler/test_harness",
    "smith/repl",
]

[workspace.dependencies]
camino = "1.1.6"
expect-test = "1.5"
itertools = "0.13"
la-arena = "0.3"
maplit = "1.0"
non-empty-vec = "0.2"
num-derive = "0.4"
num-traits = "0.2"
ordered-float = "3.0"
pretty_assertions = "1.2"
rowan = "0.15"
rustc-hash = "2.0"
salsa = { git = "https://github.com/salsa-rs/salsa", package = "salsa-2022", rev = "05b4e3ebdcdc47730cdd359e7e97fb2470527279" }
serde = "1.0"
text-size = "1.1"
toml = "0.8"
url = "2.5.0"
walkdir = "2"

