[package]
name = "compiler"
version = "0.1.0"
authors = ["theochupp <tclchiam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#cranelift = "0.73.0"
#cranelift-module = "0.73.0"
#cranelift-jit = "0.73.0"
non-empty-vec = "0.2"
peg = { git = "https://github.com/kevinmehall/rust-peg" }
itertools = "0.10"
linked_hash_set = "0.1.4"
linked-hash-map = "0.5.4"

[dev-dependencies]
wasmtime = "0.28.0"
test_source = { path = "../test_source" }

[features]
trace = ["peg/trace"]
