[package]
name = "alloy_compiler"
version = "0.1.0"
authors = ["theochupp <tclchiam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy_lexer = { path = "./lexer" }
alloy_parser = { path = "./parser" }
alloy_syntax = { path = "./syntax" }
