# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "fuzz"
version = "0.1.0"
authors = ["theochupp <tclchiam@gmail.com>"]
edition = "2021"

[package.metadata]
cargo-fuzz = true

[workspace]

[[bin]]
name = "main"
path = "fuzz_targets/main.rs"

[dependencies]
alloy_ast = {path = "../compiler/rowan/ast"}
alloy_hir = {path = "../compiler/rowan/hir"}
alloy_parser = {path = "../compiler/rowan/parser"}
libfuzzer-sys = "0.3"
