# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "alloy_ast"
version = "0.1.0"
authors = ["theochupp <tclchiam@gmail.com>"]
edition = "2018"

[dependencies]
#alloy_lexer = { path = "../lexer" }
non-empty-vec = "0.2"
ordered-float = "3.0"
itertools = "0.11.0"

[dev-dependencies]
pretty_assertions = "1.2.1"
