# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "alloy_ast"
version = "0.1.0"
authors = ["theochupp <tclchiam@gmail.com>"]
edition = "2018"

[dependencies]
alloy_syntax = { path = "../syntax" }
ordered-float = "3.0"
text-size = "1.1"

[dev-dependencies]
alloy_parser = {path = "../parser"}
expect-test = "1.3"
pretty_assertions = "1.2.1"
