# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "alloy_hir"
version = "0.1.0"
authors = ["theochupp <tclchiam@gmail.com>"]
edition = "2018"

[dependencies]
alloy_ast = { path = "../ast" }
alloy_scope = { path = "../scope" }
alloy_syntax = { path = "../syntax" }
la-arena = "0.3"
non-empty-vec = "0.2"
ordered-float = "3.0"
rustc-hash = "1.1"
text-size = "1.1"

[dev-dependencies]
alloy_parser = {path = "../parser"}
expect-test = "1.3"
pretty_assertions = "1.2.1"
