# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "alloy_hir"
version = "0.1.0"
authors = ["theochupp <tclchiam@gmail.com>"]
edition = "2018"

[dependencies]
alloy_ast = { path = "../ast" }
alloy_scope = { path = "../scope" }
alloy_syntax = { path = "../syntax" }
la-arena = { workspace = true }
maplit = { workspace = true }
non-empty-vec = { workspace = true }
ordered-float = { workspace = true }
rustc-hash = { workspace = true }
text-size = { workspace = true }

[dev-dependencies]
alloy_parser = {path = "../parser"}
alloy_test_harness = {path = "../test_harness"}
