# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "alloy_lexer"
version = "0.1.0"
authors = ["theochupp <tclchiam@gmail.com>"]
edition = "2018"

[dependencies]
non-empty-vec = "0.2"
logos = "0.12.0"
maplit = "1.0"

[dev-dependencies]
pretty_assertions = "1.2.1"
test_source = { path = "../../test_source" }
