# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "alloy_parser"
version = "0.1.0"
authors = ["theochupp <tclchiam@gmail.com>"]
edition = "2018"

[dependencies]
drop_bomb = "0.1.5"
rowan = "0.15"
text-size = "1.1"
itertools = "0.13"
alloy_lexer = { path = "../lexer" }
alloy_syntax = { path = "../syntax" }

[dev-dependencies]
alloy_test_harness = {path = "../test_harness"}
