# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "alloy_parser"
version = "0.1.0"
authors = ["theochupp <tclchiam@gmail.com>"]
edition = "2018"

[dependencies]
drop_bomb = "0.1.5"
rowan = { workspace = true }
text-size = { workspace = true }
itertools = { workspace = true }
alloy_lexer = { path = "../lexer" }
alloy_syntax = { path = "../syntax" }

[dev-dependencies]
alloy_test_harness = {path = "../test_harness"}
