[package]
name = "alloy_project"
version = "0.1.0"
authors = ["theochupp <tclchiam@gmail.com>"]
edition = "2018"

[dependencies]
camino = { workspace = true }
rustc-hash = { workspace = true }
toml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
walkdir = { workspace = true }
url = { workspace = true }
salsa = { workspace = true }

[dev-dependencies]
