# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "alloy_rowan"
version = "0.1.0"
authors = ["theochupp <tclchiam@gmail.com>"]
edition = "2018"

[dependencies]
alloy_rowan_lexer = { path = "./lexer" }
alloy_rowan_parser = { path = "./parser" }
alloy_rowan_syntax = { path = "./syntax" }

[dev-dependencies]
