# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "alloy_syntax"
version = "0.1.0"
authors = ["theochupp <tclchiam@gmail.com>"]
edition = "2018"

[dependencies]
num-derive = { workspace = true }
num-traits = { workspace = true }
rowan = { workspace = true }
alloy_lexer = { path = "../lexer" }
