# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "alloy_smith_repl"
version = "0.1.0"
authors = ["theochupp <tclchiam@gmail.com>"]
edition = "2018"

[dependencies]
alloy_compiler = { path = "../../compiler" }
alloy_parser = { path = "../../compiler/parser" }
alloy_ast = { path = "../../compiler/ast" }
alloy_hir = { path = "../../compiler/hir" }
reedline = "0.23.0"
nu-ansi-term = "0.49"
dirs = "5.0"

[dev-dependencies]
expect-test = "1.3"
pretty_assertions = "1.2.1"
