# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "alloy_rowan_hir"
version = "0.1.0"
authors = ["theochupp <tclchiam@gmail.com>"]
edition = "2018"

[dependencies]
alloy_rowan_ast = { path = "../ast" }
alloy_rowan_syntax = { path = "../syntax" }
la-arena = "0.3"
non-empty-vec = "0.2"
ordered-float = "3.0"

[dev-dependencies]
alloy_rowan_parser = {path = "../parser"}
