# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "alloy_rowan_parser"
version = "0.1.0"
authors = ["theochupp <tclchiam@gmail.com>"]
edition = "2018"

[dependencies]
drop_bomb = "0.1.5"
rowan = "0.15"
text-size = "1.1.0"
alloy_rowan_lexer = { path = "../lexer" }
alloy_rowan_syntax = { path = "../syntax" }

[dev-dependencies]
expect-test = "1.3"
pretty_assertions = "1.2.1"
test_source = { path = "../../../test_source" }
